Added follow/unfollow funtionality, ag-grid react & refactored error response in back-end

--- a/resources/html/home.html
+++ b/resources/html/home.html
@@ -32,6 +32,8 @@
     {% style "/assets/bulma/css/bulma.min.css" %}
     {% style "/assets/material-icons/css/material-icons.min.css" %}
     {% style "/css/screen.css" %}
+    {% style "/css/ag-grid.css" %}
+    {% style "/css/ag-theme-balham.css" %}
 
     <script type="text/javascript">
         var csrfToken = "{{csrf-token}}";
